# Importance-Notes

./: Makefile  README.md  config.status  configure  configure.ac  helloworld  main.c
.deps/: main.Po
